// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login screen matches snapshot of login screen (initial state) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  testID="themed-view"
>
  <Text
    style={
      [
        {
          "color": "#11181C",
        },
        undefined,
        undefined,
        undefined,
        {
          "fontSize": 18,
          "fontWeight": "bold",
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Login To Your Account
  </Text>
  <View
    style={
      {
        "height": 40,
        "width": "100%",
      }
    }
  />
  <TextInput
    keyboardType="email-address"
    onChangeText={[Function]}
    placeholder="Email"
    style={
      [
        {
          "backgroundColor": "#d6d5e1",
          "borderRadius": 6,
          "color": "#11181C",
          "padding": 20,
        },
        {
          "marginBottom": 20,
          "width": "80%",
        },
      ]
    }
    value=""
  />
  <TextInput
    onChangeText={[Function]}
    placeholder="Password"
    secureTextEntry={true}
    style={
      [
        {
          "backgroundColor": "#d6d5e1",
          "borderRadius": 6,
          "color": "#11181C",
          "padding": 20,
        },
        {
          "marginBottom": 20,
          "width": "80%",
        },
      ]
    }
    value=""
  />
  <View
    style={
      {
        "height": 40,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 6,
          "marginVertical": 10,
          "padding": 18,
        },
        {
          "backgroundColor": "#0a7ea4",
        },
        false,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#f2f2f2",
            "textAlign": "center",
          },
        ]
      }
    >
       Login 
    </Text>
  </View>
  <View
    style={
      {
        "height": 40,
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "height": 100,
        "width": "100%",
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#11181C",
        },
        undefined,
        undefined,
        {
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 24,
        },
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Don't have an account?
  </Text>
  <Text
    href="/register"
    onPress={[Function]}
    role="link"
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#0a7ea4",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      Register here
    </Text>
  </Text>
</View>
`;

exports[`Login screen matches snapshot of login screen with error 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  testID="themed-view"
>
  <Text
    style={
      [
        {
          "color": "#11181C",
        },
        undefined,
        undefined,
        undefined,
        {
          "fontSize": 18,
          "fontWeight": "bold",
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Login To Your Account
  </Text>
  <View
    style={
      {
        "height": 40,
        "width": "100%",
      }
    }
  />
  <TextInput
    keyboardType="email-address"
    onChangeText={[Function]}
    placeholder="Email"
    style={
      [
        {
          "backgroundColor": "#d6d5e1",
          "borderRadius": 6,
          "color": "#11181C",
          "padding": 20,
        },
        {
          "marginBottom": 20,
          "width": "80%",
        },
      ]
    }
    value="fail@example.com"
  />
  <TextInput
    onChangeText={[Function]}
    placeholder="Password"
    secureTextEntry={true}
    style={
      [
        {
          "backgroundColor": "#d6d5e1",
          "borderRadius": 6,
          "color": "#11181C",
          "padding": 20,
        },
        {
          "marginBottom": 20,
          "width": "80%",
        },
      ]
    }
    value="somepw"
  />
  <View
    style={
      {
        "height": 40,
        "width": "100%",
      }
    }
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 6,
          "marginVertical": 10,
          "padding": 18,
        },
        {
          "backgroundColor": "#0a7ea4",
        },
        false,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#f2f2f2",
            "textAlign": "center",
          },
        ]
      }
    >
       Login 
    </Text>
  </View>
  <View
    style={
      {
        "height": 40,
        "width": "100%",
      }
    }
  />
  <Text
    style={
      {
        "backgroundColor": "#f5c1c8",
        "borderColor": undefined,
        "borderRadius": 6,
        "borderWidth": 1,
        "color": undefined,
        "marginHorizontal": 10,
        "padding": 10,
      }
    }
  >
    Snapshot error
  </Text>
  <View
    style={
      {
        "height": 100,
        "width": "100%",
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#11181C",
        },
        undefined,
        undefined,
        {
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 24,
        },
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Don't have an account?
  </Text>
  <Text
    href="/register"
    onPress={[Function]}
    role="link"
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#0a7ea4",
            "fontSize": 20,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      Register here
    </Text>
  </Text>
</View>
`;
